Include following/followers count in self profile; implement mute reason saving/loading; refactor code
